--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <p>
 <b>Instructions</b><br />Type in the passage(s) that you would like to translate in the input form below. Then press "Retrieve passages" and wait as the translations are retrieved. Depending on how many passages you are searching for, this can take anywhere from 5 seconds to almost a minute. The results will be displayed below. You can copy and paste the results in the ECM template document (<a href="https://wiki.gracepointonline.org/5846">link</a>).</p>
 Type passage reference(s) here (i.e. John 3:16; Ps. 46:10; 1 John 1:9-10) <br />
-<input value="John 3:16; Ps. 46:10; 1 John 1:9-10" type="text" size="100" id="input" onkeydown="javascript: if (window.event.keyCode == 13) { parse(); };" autofocus /><br /><a href="#" class="button white" onclick="javascript: parse();">Retrieve passages</a>
+<input value="John 3:16; Ps. 46:10; 1 John 1:9-10" type="text" size="100" id="input" onkeydown="javascript: if (window.event.keyCode == 13) { parse(); };" autofocus /><br /><a href="#" id="submit" class="button white" onclick="javascript: parse();">Retrieve passages</a>
 
 <div id="progress" style="margin-top: 5px; display: none;"><img src="ajax-loader.gif" /></div>
 
