--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 Type passage reference(s) here (i.e. John 3:16; Ps. 46:10; 1 John 1:9-10) <br />
 <input value="John 3:16; Ps. 46:10; 1 John 1:9-10" type="text" size="100" id="input" onkeydown="javascript: if (window.event.keyCode == 13) { parse(); };" autofocus /><br /><a href="#" id="submit" class="button white" onclick="javascript: parse();">Retrieve passages</a>
 
-<div id="progress" style="margin-top: 5px; display: none;"><img src="ajax-loader.gif" /></div>
+<span id="progress" style="padding-left: 10px; display: none;"><img src="ajax-loader.gif" /></span>
 
 </div>
 
