adding KhmerOS font

--- a/index.html
+++ b/index.html
@@ -17,13 +17,19 @@
   src: url(Wingdings2.ttf) format('ttf');
   src: url(Wingdings2.woff) format('woff');
 } 
+
+@font-face {
+  font-family: "KhmerOS";
+  src: url(KhmerOS.ttf) format('ttf');
+  src: url(KhmerOS.woff) format('woff');
+}
 </style>
 
 <script src="//ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js"></script>
 <script>
   WebFontConfig = {
     custom: {
-      families: ['APHont', 'Wingdings 2'],
+      families: ['APHont', 'Wingdings 2', 'KhmerOS'],
       testStrings: {
         "Wingdings 2": 'cd',
         "APHont": '“'
