adding faster page load

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <script type="text/javascript" src="functions.js"></script>
 </head>
 
-<body onload="javascript:parse();" style="display: none">
+<body onload="javascript: loadText();"> 
 <div id="instructions" class="noprint">
 <p>
 <b>Instructions</b><br />Type in the passage(s) that you would like to translate in the input form below. Then press "Retrieve passages" and wait as the translations are retrieved. Depending on how many passages you are searching for, this can take anywhere from 5 seconds to almost a minute. The results will be displayed below. You can copy and paste the results in the ECM template document (<a href="https://wiki.gracepointonline.org/5846">link</a>).</p>
