add redirecting message

--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 <meta http-equiv="refresh" content="0;URL=http://bible-translation.herokuapp.com" />
 </head>
 <body>
-This page has moved to <a href="http://bible-translation.herokuapp.com">http://bible-translation.herokuapp.com</a>.
+This page has moved to <a href="http://bible-translation.herokuapp.com">http://bible-translation.herokuapp.com</a>. Redirecting automatically...
 </body>
 </html>
