notice of site maintenance

--- a/app.html
+++ b/app.html
@@ -43,9 +43,10 @@
 </head>
 
 <body onload="javascript: loadText();">
+<div style="background-color: orange;">Notice: Korean, Khmer, and Japanese are not working right now due to some site changes. I am working on a fix for this. Thanks for your patience.</div>
 <div id="instructions" class="noprint">
 <p>
-<b>Instructions</b><br />Type in the passage(s) that you would like to translate in the input form below. Then press "Retrieve passages" and wait as the translations are retrieved. Depending on how many passages you are searching for, this can take anywhere from 5 seconds to almost a minute. The results will be displayed below. You can copy and paste the results in the ECM template document (<a href="https://wiki.gracepointonline.org/5853">link</a>).</p>
+<b>Instructions</b><br />Type in the passage(s) that you would like to translate in the input form below. Then press "Retrieve passages" and wait as the translations are retrieved. Depending on how many passages you are searching for, this can take anywhere from 5 seconds to almost a minute. The results will be displayed below. You can copy and paste the results in the ECM template document.</p>
 <p>
 <b>Instructions for Printing Bulletin Inserts</b><br />Paste the text onto two pages, then print with two-sided layout, flipping on the short edge. After the sheet has been printed, cutting it half will produce two identical inserts.
 </p>
