--- a/app.html
+++ b/app.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Bible Translation Tool</title>
+<title>Bible Translation App</title>
 <link rel="stylesheet" type="text/css" href="stylesheets/simptip-mini-v1.0.2.css" media="all" />
 <link rel="stylesheet" type="text/css" href="stylesheets/simple_web_buttons.css" media="all" />
 <link rel="stylesheet" type="text/css" href="stylesheets/style.css" media="all" />
@@ -43,7 +43,6 @@
 </head>
 
 <body onload="javascript: loadText();">
-<div style="background-color: orange;">Notice: Khmer is not working right now due to some site changes. I am working on a fix for this. Thanks for your patience.</div>
 <div id="instructions" class="noprint">
 <p>
 <b>Instructions</b><br />Type in the passage(s) that you would like to translate in the input form below. Then press "Retrieve passages" and wait as the translations are retrieved. Depending on how many passages you are searching for, this can take anywhere from 5 seconds to almost a minute. The results will be displayed below. You can copy and paste the results in the ECM template document.</p>
